# predictmind-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  main.py
app/analysis/: __init__.py  router.py  schemas.py  sentiment.py
education/: 01-fastapi-and-docker.md  02-build-and-ci-fix.md  02-glossary.md  03-glossary.md  03-news-sentiment.md  04-glossary.md  README.md
tests/: test_analysis.py  test_health.py  test_news_endpoints.py
